# bankstract-cloud

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE_HEADER.txt  PRD.md  PRICING.md  PRIVACY.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml  docs-deploy.yml  infra-prod-deploy.yml
_handoff/: alembic-plan.md  paystack-migration-plan.md
apps/app/: .env.example  Dockerfile  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  (+2 more)
apps/worker/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/worker/scripts/: export_openapi.py
apps/worker/src/bankstract_cloud/: __init__.py  audit.py  auth.py  billing.py  billing_cron.py  clock.py  config.py  db.py  engine.py  jobs.py  main.py  metrics.py  models.py  observability.py  overage_ledger.py  owner.py  paystack.py  rate_limit.py  responses.py  sample.py  state.py  subscriptions.py  tiers.py  turnstile.py  usage.py  watermark.py
apps/worker/src/bankstract_cloud/migrations/: README.md  env.py
apps/worker/src/bankstract_cloud/migrations/versions/: 0001_baseline.py  0002_overage_billing.py  0003_pending_activations.py
apps/worker/src/bankstract_cloud/routes/: __init__.py  account.py  billing.py  health.py  keys.py  parse.py
apps/worker/tests/: conftest.py  test_billing.py  test_cron.py  test_error_envelope.py  test_format.py  test_health.py  test_jobs.py  test_keys.py  test_observability.py  test_parse.py  test_privacy_hardening.py  test_progress.py  test_redact.py  test_usage.py  test_watermark.py
apps/worker/tests/fixtures/: __init__.py
infra/: .env.example  Caddyfile  README.md  docker-compose.yml
infra-prod/: .env.example  Caddyfile  README.md  backup.sh  docker-compose.yml
(+206 files in other folders)
