[project]
name = "bankstract-cloud-worker"
version = "0.1.0"
description = "FastAPI worker wrapping the bankstract engine. Exposes /v1/parse."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Jeffery Orazulike" }]
dependencies = [
    "bankstract>=0.15.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.20",
    "argon2-cffi>=23.1.0",
    "httpx>=0.28.0",
    "alembic>=1.18.4",
    "sentry-sdk[fastapi]>=2.63.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bankstract_cloud"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Form/Header/File belong in argument defaults by design.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.File",
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

# src stays fully strict. Tests exercise the TestClient/httpx surface, whose
# responses are typed `Any` upstream. Suppress only that unknown-type noise here,
# not real type errors.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
